--- a/apps/telemed-deploy-ready/index.html
+++ b/apps/telemed-deploy-ready/index.html
@@ -1,234 +1,140 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <base href="/">
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TeleMed — Plataforma de Telemedicina</title>
-  <meta name="description" content="Plataforma completa de telemedicina com Dr. AI, centro de testes psiquiátricos e gestão médica integrada." />
-  <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://telemed.pro/lp" />
-  
-  <!-- Open Graph -->
-  <meta property="og:title" content="TeleMed — Plataforma de Telemedicina">
-  <meta property="og:description" content="Plataforma completa de telemedicina com Dr. AI, centro de testes psiquiátricos e gestão médica integrada.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://telemed.pro/lp">
-  
-  <link rel="stylesheet" href="/css/theme-telemed.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TeleMed — Hub</title>
+  <style>
+    :root{
+      --brand:#0ea5e9; --ink:#0b1324; --ok:#059669; --bad:#dc2626;
+      --text:#0f172a; --muted:#64748b; --card:#fff; --border:#e2e8f0; --bg:#f8fafc;
+    }
+    *{box-sizing:border-box} body{margin:0;padding:28px;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;background:var(--bg);color:var(--text)}
+    header{display:flex;gap:12px;align-items:center;flex-wrap:wrap;margin-bottom:18px}
+    .tag{background:var(--brand);color:#fff;padding:6px 10px;border-radius:999px;font-size:.85rem}
+    h1{margin:0}
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(280px,1fr))}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:16px;box-shadow:0 1px 2px rgba(0,0,0,.03)}
+    .muted{color:var(--muted)}
+    .btn{background:var(--brand);color:#fff;border:0;padding:9px 12px;border-radius:10px;cursor:pointer}
+    input{width:100%;padding:8px 10px;border:1px solid var(--border);border-radius:8px;background:#fff}
+    .row{display:flex;gap:8px;align-items:center}.row>*{flex:1}
+    .badge{display:inline-flex;align-items:center;gap:6px;padding:3px 8px;border-radius:999px;font-size:.8rem;border:1px solid var(--border)}
+    .ok{color:var(--ok);border-color:#bbf7d0;background:#ecfdf5}
+    .bad{color:var(--bad);border-color:#fecaca;background:#fef2f2}
+    ul.linklist{list-style:none;padding:0;margin:8px 0 0}
+    ul.linklist li{display:flex;justify-content:space-between;gap:10px;padding:8px;border:1px solid var(--border);border-radius:10px;margin-bottom:8px;background:#fff}
+    ul.linklist a{color:var(--brand);text-decoration:none;font-weight:600}
+    footer{margin-top:28px;color:var(--muted);font-size:.9rem}
+    code{background:#e2e8f0;padding:2px 6px;border-radius:6px}
+  </style>
 </head>
 <body>
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <div class="hero-content">
-        <h1>TeleMed</h1>
-        <p class="hero-subtitle">
-          Plataforma completa de telemedicina com inteligência artificial, 
-          centro de avaliações psiquiátricas e gestão médica integrada.
-        </p>
-        <div class="hero-buttons">
-          <a data-path="/dashboard/" class="btn btn-primary">
-            Acessar Dashboard
-          </a>
-          <a data-path="/consulta/" class="btn btn-outline">
-            Nova Consulta
-          </a>
+  <header>
+    <span class="tag">TeleMed</span>
+    <h1>Hub de Apresentação</h1>
+  </header>
+
+  <section class="card">
+    <h2>Serviços (health)</h2>
+    <p class="muted">Edite os endpoints se necessário e clique em “Testar”.</p>
+    <div class="grid">
+      <div>
+        <label>AUCTION_URL</label>
+        <div class="row">
+          <input id="auUrl" placeholder="https://telemed-auction.onrender.com" />
+          <button class="btn" id="checkAuction">Testar</button>
         </div>
+        <div id="outAuction" class="muted" style="margin-top:6px"></div>
       </div>
-    </div>
-  </section>
-
-  <!-- Por que escolher a TeleMed? -->
-  <section class="section" id="por-que-telemed">
-    <div class="container">
-      <h2 class="center">Por que escolher a TeleMed?</h2>
-      <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(280px,1fr));align-items:center">
-        <div class="prose">
-          <div class="card mb-3">
-            <div class="card-body">
-              <span class="badge">Especialidades</span>
-              <p>Na TeleMed, você tem acesso imediato a <strong>médicos experientes de todo o Brasil</strong>, com atendimento online por vídeo, direto do celular ou computador, sem complicação.</p>
-            </div>
-          </div>
-
-          <div class="card mb-3">
-            <div class="card-body">
-              <h3>A qualquer hora, de qualquer lugar.</h3>
-              <p>Plataforma 24h/7. Tudo o que você precisa é de Internet. Atendimentos com conforto e privacidade.</p>
-              <a class="btn btn-outline" data-path="/como-funciona?tab=horarios">Saiba Mais</a>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-body">
-              <span class="badge">Quero uma consulta</span>
-              <p><strong>Consulta completa, com documentos válidos.</strong> Emissão de receitas, atestados e pedidos de exame de forma segura e digital.</p>
-              <a class="btn btn-outline" data-path="/como-funciona/">Saiba Mais</a>
-            </div>
-          </div>
+      <div>
+        <label>INTERNAL_URL</label>
+        <div class="row">
+          <input id="inUrl" placeholder="https://telemed-internal.onrender.com" />
+          <button class="btn" id="checkInternal">Testar</button>
         </div>
-
-        <figure class="figure center">
-          <img loading="lazy" src="/assets/lp/hero-saude.jpg" alt="Pessoa saudável com braços abertos">
-        </figure>
+        <div id="outInternal" class="muted" style="margin-top:6px"></div>
       </div>
-    </div>
-  </section>
-
-  <!-- Revolucionamos o atendimento médico -->
-  <section class="section" id="revolucionamos">
-    <div class="container">
-      <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(320px,1fr));align-items:center">
-        <figure class="figure">
-          <img loading="lazy" src="/assets/lp/revolucionamos.jpg" alt="Profissional de saúde usando tablet">
-        </figure>
-
-        <div class="prose">
-          <h2>Revolucionamos o atendimento médico</h2>
-          <p>Nossa plataforma une tecnologia de ponta e cuidado humanizado para oferecer a melhor experiência.</p>
-
-          <ul class="grid" style="grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px">
-            <li class="card"><div class="card-body"><strong>Dr. AI</strong><br><span class="muted">Triagem inteligente e apoio ao raciocínio.</span></div></li>
-            <li class="card"><div class="card-body"><strong>Médicos com RQE</strong><br><span class="muted">Profissionais qualificados e registrados.</span></div></li>
-            <li class="card"><div class="card-body"><strong>Central de Testes</strong><br><span class="muted">Testes diversos para auxiliar no diagnóstico.</span></div></li>
-            <li class="card"><div class="card-body"><strong>Reagende com quem gostou</strong><br><span class="muted">Continue com o mesmo médico.</span></div></li>
-            <li class="card"><div class="card-body"><strong>Telemonitoramento</strong><br><span class="muted">Acompanhamento de enfermagem após a consulta.</span></div></li>
-          </ul>
-
-          <div class="mt-3">
-            <a class="btn btn-primary" data-path="/dr-ai/">Conheça o Dr. AI</a>
-            <a class="btn" data-path="/consulta/">Consulta Avançada</a>
-          </div>
+      <div>
+        <label>PRODUCTIVITY_URL</label>
+        <div class="row">
+          <input id="prodUrl" placeholder="https://telemed-productivity.onrender.com" />
+          <button class="btn" id="checkProd">Testar</button>
         </div>
+        <div id="outProd" class="muted" style="margin-top:6px"></div>
       </div>
     </div>
   </section>
 
-  <!-- Especialidades Atendidas -->
-  <section class="section" id="especialidades">
-    <div class="container center">
-      <h2>Especialidades Atendidas</h2>
-      <p class="muted">Cuidado especializado para todas as suas necessidades de saúde</p>
-
-      <div class="grid cards mt-3" style="grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px">
-        <div class="card"><img loading="lazy" src="/assets/especialidades/clinica.jpg" alt="Clínica Geral"><div class="card-body"><strong>Clínica Geral</strong><br><span class="muted">Avaliação inicial</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/pediatria.jpg" alt="Pediatria"><div class="card-body"><strong>Pediatria</strong><br><span class="muted">Crianças e adolescentes</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/ortopedia.jpg" alt="Ortopedia"><div class="card-body"><strong>Ortopedia</strong><br><span class="muted">Ossos e coluna</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/dermato.jpg" alt="Dermatologia"><div class="card-body"><strong>Dermatologia</strong><br><span class="muted">Pele, cabelo e unhas</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/gineco.jpg" alt="Ginecologia"><div class="card-body"><strong>Ginecologia</strong><br><span class="muted">Saúde feminina</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/psiquiatria.jpg" alt="Psiquiatria"><div class="card-body"><strong>Psiquiatria</strong><br><span class="muted">Transtornos emocionais</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/psicoterapia.jpg" alt="Psicoterapia"><div class="card-body"><strong>Psicoterapia</strong><br><span class="muted">Escuta qualificada</span></div></div>
-        <div class="card"><img loading="lazy" src="/assets/especialidades/nutricao.jpg" alt="Nutrição"><div class="card-body"><strong>Nutrição</strong><br><span class="muted">Planos personalizados</span></div></div>
-      </div>
-
-    </div>
+  <section class="card">
+    <h2>Páginas & Rotas</h2>
+    <p class="muted">O hub verifica se a rota existe (200) antes de exibir o selo ✅.</p>
+    <ul id="routes" class="linklist"></ul>
   </section>
 
-  <!-- Explore o Sistema -->
-  <section class="section" id="explorar-sistema">
-    <div class="container center">
-      <h2>🚀 Explore Nossa Plataforma</h2>
-      <p class="muted">Conheça todas as funcionalidades do TeleMed Sistema</p>
-
-      <div class="card mt-3" style="max-width: 600px; margin: 2rem auto; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none;">
-        <div class="card-body" style="text-align: center; padding: 2.5rem;">
-          <h3 style="color: white; margin-bottom: 1rem; font-size: 1.8rem;">
-            🩺 Guia Completo do Sistema
-          </h3>
-          <p style="color: rgba(255,255,255,0.9); font-size: 1.1rem; margin-bottom: 2rem;">
-            Descubra como utilizar todas as funcionalidades da nossa plataforma de telemedicina. 
-            Guia passo a passo para médicos e pacientes.
-          </p>
-          <a data-path="/preview/guia-orientacao.html" class="btn" style="background: white; color: #667eea; font-weight: bold; font-size: 1.1rem; padding: 1rem 2rem; border: none;">
-            📖 Explorar Guia Completo →
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Como funciona? -->
-  <section class="section" id="como-funciona">
-    <div class="container center">
-      <h2>Como funciona?</h2>
-      <p class="muted">Em 4 passos você agenda sua consulta</p>
-
-      <div class="grid cards mt-3" style="grid-template-columns:repeat(auto-fit,minmax(220px,1fr))">
-        <div class="card"><div class="card-body"><div class="badge">1</div><strong>Descreva</strong><br><span class="muted">Conte o que sente; o Dr. AI sugere a especialidade.</span></div></div>
-        <div class="card"><div class="card-body"><div class="badge">2</div><strong>Defina o valor</strong><br><span class="muted">Modelos transparentes; veja também <a data-path="/precos/">preços</a>.</span></div></div>
-        <div class="card"><div class="card-body"><div class="badge">3</div><strong>Agende</strong><br><span class="muted">Escolha dia e hora ou entre na fila.</span></div></div>
-        <div class="card"><div class="card-body"><div class="badge">4</div><strong>Consulte</strong><br><span class="muted">Atendimento por vídeo, com documentos digitais.</span></div></div>
-      </div>
-
-      <div class="mt-3">
-        <a class="btn btn-primary" data-path="/como-funciona/">Saiba Mais</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Como nos destacamos da concorrência -->
-  <section class="section" id="comparativo">
-    <div class="container">
-      <h2 class="center">Como nos destacamos da concorrência</h2>
-      <p class="center muted">Veja como a TeleMed Consulta se compara</p>
-
-      <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(320px,1fr));align-items:center">
-        <div class="card">
-          <div class="card-body">
-            <table aria-label="Comparativo de recursos">
-              <thead>
-                <tr><th>Recurso</th><th>TeleMed</th><th>Outros</th></tr>
-              </thead>
-              <tbody>
-                <tr><td>Triagem com IA</td><td>✅</td><td>❌</td></tr>
-                <tr><td>Reagendar com o mesmo médico</td><td>✅</td><td>❌</td></tr>
-                <tr><td>Telemonitoramento de enfermagem</td><td>✅</td><td>❌</td></tr>
-                <tr><td>Médicos com RQE</td><td>✅</td><td>❌</td></tr>
-                <tr><td>Transparência no valor</td><td>✅</td><td>❌</td></tr>
-                <tr><td>Atendimento por especialistas</td><td>✅</td><td>Limitado</td></tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <figure class="figure center">
-          <img loading="lazy" src="/assets/lp/comparativo.jpg" alt="Médico analisando exames">
-        </figure>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="center">
-        <h3>TeleMed</h3>
-        <p class="muted">Transformando o atendimento médico através da tecnologia</p>
-        <div class="footer-links">
-          <a data-path="/agenda/">Agenda</a>
-          <a data-path="/dashboard/">Dashboard</a>
-          <a data-path="/centro-de-testes/">Centro de Testes</a>
-          <a data-path="/privacidade">Privacidade</a>
-        </div>
-      </div>
-    </div>
+  <footer>
+    Dica: o serviço estático no Render usa <code>Root Directory = apps/telemed-deploy-ready</code>,
+    <code>Build Command = :</code> e <code>Publish Directory = .</code>
   </footer>
 
-  <script>
-    // Auto-hydrate navigation links with APP_URL
-    window.APP_URL = window.APP_URL || '';
-    
-    document.querySelectorAll('a[data-path]').forEach(a => {
-      const path = a.getAttribute('data-path');
-      a.href = window.APP_URL + path;
-    });
-    
-    console.log('🚀 TeleMed LP oficial carregada');
-    console.log('🔗 Links: Dr. AI, Centro de Testes, Recursos disponíveis');
-    console.log('🌐 APP_URL configured:', window.APP_URL || 'localhost');
-  </script>
+<script>
+  const DEFAULTS = {
+    auction : 'https://telemed-auction.onrender.com',
+    internal: 'https://telemed-internal.onrender.com',
+    prod    : 'https://telemed-productivity.onrender.com',
+  };
+  const PAGES = [
+    { label:'Demo médico (GUI)',           url:'/demo.html' },
+    { label:'Exemplo de integração',       url:'/example-integration.html' },
+    { label:'Gestão avançada (pasta)',     url:'/gestao-avancada/' },
+    { label:'Demo ativo / Configurações',  url:'/demo-ativo/configuracoes.html' },
+    { label:'Atalho /enhanced → demo',     url:'/enhanced/' },
+  ];
+  const AU = document.getElementById('auUrl');
+  const IN = document.getElementById('inUrl');
+  const PR = document.getElementById('prodUrl');
+  AU.value = DEFAULTS.auction; IN.value = DEFAULTS.internal; PR.value = DEFAULTS.prod;
+
+  async function health(url, outId){
+    const out = document.getElementById(outId); out.innerHTML='';
+    try{
+      const r = await fetch(url.replace(/\/$/,'')+'/healthz', {method:'GET'});
+      const ok = r.ok; let j = {};
+      try{ j = await r.json(); }catch{}
+      out.innerHTML = ok && j?.ok
+        ? `<span class="badge ok">OK</span> <code>${url}/healthz</code>`
+        : `<span class="badge bad">Erro ${r.status}</span> <code>${url}/healthz</code>`;
+    }catch(e){
+      out.innerHTML = `<span class="badge bad">Falha</span> <small class="muted">${String(e)}</small>`;
+    }
+  }
+  document.getElementById('checkAuction').onclick = ()=>health(AU.value,'outAuction');
+  document.getElementById('checkInternal').onclick= ()=>health(IN.value,'outInternal');
+  document.getElementById('checkProd').onclick    = ()=>health(PR.value,'outProd');
+
+  async function buildRoutes(){
+    const ul = document.getElementById('routes'); ul.innerHTML = '';
+    for (const p of PAGES){
+      const li = document.createElement('li');
+      const left = document.createElement('div');
+      const right= document.createElement('div');
+
+      left.innerHTML = `<a href="${p.url}">${p.label}</a><div class="muted" style="font-size:.85rem">${p.url}</div>`;
+      right.innerHTML= `<span class="badge" id="b-${btoa(p.url)}">verificando…</span>`;
+      li.appendChild(left); li.appendChild(right); ul.appendChild(li);
+
+      try{
+        const r = await fetch(p.url, {method:'GET'});
+        const badge = document.getElementById(`b-${btoa(p.url)}`);
+        if (r.ok) badge.className='badge ok', badge.textContent='Existe';
+        else      badge.className='badge bad', badge.textContent='404';
+      }catch{
+        const badge = document.getElementById(`b-${btoa(p.url)}`);
+        badge.className='badge bad'; badge.textContent='Erro';
+      }
+    }
+  }
+  buildRoutes();
+</script>
 </body>
 </html>
