--- a/apps/telemed-deploy-ready/index.html
+++ b/apps/telemed-deploy-ready/index.html
@@ -88,6 +88,7 @@
     prod    : 'https://telemed-productivity.onrender.com',
   };
   const PAGES = [
+    { label:'Guia imprimível (PDF)', url:'/demo-ativo/roteiro-print.html' },
     { label:'Demo médico (GUI)',           url:'/demo.html' },
     { label:'Exemplo de integração',       url:'/example-integration.html' },
     { label:'Gestão avançada (pasta)',     url:'/gestao-avancada/' },
