docs: roteiro 1 página (A4) — imprimível

--- a/apps/telemed-deploy-ready/index.html
+++ b/apps/telemed-deploy-ready/index.html
@@ -88,6 +88,7 @@
     prod    : 'https://telemed-productivity.onrender.com',
   };
   const PAGES = [
+    { label:'Roteiro 1 página (PDF)', url:'/demo-ativo/roteiro-1pagina.html' },
     { label:'Guia imprimível (PDF)', url:'/demo-ativo/roteiro-print.html' },
     { label:'Demo médico (GUI)',           url:'/demo.html' },
     { label:'Exemplo de integração',       url:'/example-integration.html' },
